--- a/store/frontend/package.json
+++ b/store/frontend/package.json
@@ -15,6 +15,7 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
