--- a/store/frontend/package.json
+++ b/store/frontend/package.json
@@ -17,10 +17,11 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "use-reducer-logger": "^1.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.88.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
