--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["placeorder", "signin", "SIGNOUT"]
+  "cSpell.words": [
+    "orderlist",
+    "placeorder",
+    "productlist",
+    "signin",
+    "SIGNOUT",
+    "userlist"
+  ]
 }
