--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-helmet-async": "^1.3.0",
     "react-paypal-js": "^0.0.1-security",
     "react-router-dom": "^6.11.2",
